--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
-Django==2.2.6
-Pillow==6.2.1
-
+astroid==2.2.5
+Django==2.2.2
+django-crispy-forms==1.8.0
+isort==4.3.20
+lazy-object-proxy==1.4.1
+mccabe==0.6.1
+Pillow==6.0.0
+pylint==2.3.1
+pytz==2019.1
+six==1.12.0
+sqlparse==0.3.0
+typed-ast==1.4.0
+wrapt==1.11.2
